# ml_dl_experiments

./:  work_with_errors_from_learning.md  .gitignore  5_Friday_DImensionality_reduction.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_for_VM.txt  requirements_sprint_1.txt  yaml_config_instruction.md
dl/dl_modules/1. first_theme_neuron_MLP/metrics/: __init__.py
dl/dl_modules/2. second_theme_PyTorch/: 2. work_with_clearml.ipynb  3. MNIST.ipynb  SimpleNN.py
dl/dl_modules/cv/: predict_top3.py  resnet18_prediction_with_blurred.py  resnet18_simple_prediction.py  test_resnet18.ipynb
dl/dl_modules/first_theme/: 1. func_activation.ipynb  basic_neuron.py  basic_relu.py
dl/dl_modules/first_theme/func_activation/: basic_relu.py  basic_sigmoid.py  basic_softmax.py  basic_tanh.py  swish_f.py
dl/dl_modules/first_theme_neuron_MLP/: 1. func_activation.ipynb  1. intro in neural networks.ipynb  MLP_learner_GD.py  basic_MLP.py
dl/dl_modules/first_theme_neuron_MLP/func_activation/: __init__.py  basic_sigmoid.py  basic_sin.py  basic_tanh.py
dl/dl_modules/first_theme_neuron_MLP/metrics/: __init__.py  basic_categorical_cross_entropy_loss.py  basic_huber.py  basic_log_loss.py  basic_mse.py
dl/dl_modules/nlp/: simple_ariphmetic_analog.py  simple_bot_with_embeddings.py
dl/dl_modules/second_theme_PyTorch/: PyTorch_intro.ipynb  PyTorch_realize.ipynb  SimpleNN.py  info.md  work_with_clearml.ipynb
ml/: 5_Friday_DImensionality_reduction.ipynb
ml_dl_experiments/: __init__.py  labelImg_instruction.md  settings.py  show_image_from_source.py  vm_instruction.md
ml_dl_experiments/dl/: __init__.py
ml_dl_experiments/dl/dl_modules/: visualize_layer_activations.py
ml_dl_experiments/dl/dl_modules/1_first_theme_neuron_MLP/: MLP_learner_GD.py  train_model.py
ml_dl_experiments/dl/dl_modules/2_second_theme_PyTorch/: 3. MNIST.ipynb
ml_dl_experiments/dl/dl_modules/CNN/: 2. Architecture CNN.ipynb  3. CNN in work.ipynb  4. Clothing classif.ipynb  5.Color_cloth_classifier.ipynb  DepthWIseBlock.py  __init__.py  bottleneck_block.py  colored_image_classifier.py  pill_classification.ipynb  pill_classification_final.ipynb  residual_block.py  show_examples.py  train_CNN_model.py
ml_dl_experiments/dl/dl_modules/Multimodal_and_preprocessing/: 1.Text_sampling_to_NLP.ipynb  2. Preprocessing for cv and audio.ipynb  3. Practice-multimodal.ipynb  MultimodalConfig.py  cross_attention_model.py  get_multimodal_transforms.py  multimodal_collate_fn.py  multimodal_dataset.py  plot_image.py  set_requires_grad.py  train_multimodal_model.py
ml_dl_experiments/dl/dl_modules/RNN_transformers/: 1.Work_with_sequential_data.ipynb  2.intro_to_RNN.ipynb  3.LSTM and GRU.ipynb  4.Attention and transformers.ipynb  AmazonRNNDataset.py  MeanPoolingRNN.py  PaddedDataset.py  RowDataset.py  SimpleRNN.py  YelpDataset.py  evaluate.py  (+7 more)
ml_dl_experiments/ml/PCA/: biplot.py  biplot_testing.ipynb
(+39 files in other folders)
